# terrainbento

./: .coverage  .coveralls.yaml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  black.cfg  environment-dev.yml  noxfile.py  pyproject.toml  requirements-notebooks.txt  requirements-travis-tutorials.txt  requirements.txt  requirements_notebooks.txt  requirements_read_the_docs.txt  setup.cfg  setup.py  terrainbento_model_used.csv  terrainbento_standard_names.csv  versioneer.py
.ci/: pypi_upload.py
.ci/appveyor/: anaconda_upload.py  pypi_upload.py
.ci/travis/: run_travis_test.sh
.conda-recipe/: build.sh  meta.yaml  run_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  docs.yml  flake8.yml  lint.yml  prerelease.yml  release.yml  test-notebooks.yml  test.yml
docs/: Makefile  conf.py  environment.yml  index.rst  make.bat  terrainbento_logo.eps  terrainbento_logo_with_name.eps
docs/source/: modules.rst  terrainbento.base_class.erosion_model.rst  terrainbento.base_class.model_template.rst  terrainbento.base_class.rst  terrainbento.base_class.stochastic_erosion_model.rst  terrainbento.base_class.two_lithology_erosion_model.rst  terrainbento.baselevel_handler.rst  terrainbento.boundary_condition_handlers.capture_node_baselevel_handler.rst  terrainbento.boundary_condition_handlers.closed_node_baselevel_handler.rst  terrainbento.boundary_condition_handlers.generic_function_boundary_handler.rst  terrainbento.boundary_condition_handlers.not_core_node_baselevel_handler.rst  terrainbento.boundary_condition_handlers.precip_changer.rst  terrainbento.boundary_condition_handlers.rst  terrainbento.boundary_condition_handlers.single_node_baselevel_handler.rst  terrainbento.boundary_handlers.capture_node_baselevel_handler.rst  terrainbento.boundary_handlers.generic_function_baselevel_handler.rst  terrainbento.boundary_handlers.not_core_node_baselevel_handler.rst  terrainbento.boundary_handlers.precip_changer.rst  terrainbento.boundary_handlers.rst  terrainbento.boundary_handlers.single_node_baselevel_handler.rst  terrainbento.clock.rst  terrainbento.derived_models.model_000_basic.rst  terrainbento.derived_models.model_002_basicTh.rst  terrainbento.derived_models.model_008_basicDd.rst  terrainbento.derived_models.model_010_basicHy.rst  terrainbento.derived_models.model_012_basicHyTh.rst  terrainbento.derived_models.model_018_basicDdHy.rst  terrainbento.derived_models.model_040_basicCh.rst  terrainbento.derived_models.model_100_basicSt.rst  terrainbento.derived_models.model_102_basicStTh.rst  terrainbento.derived_models.model_108_basicDdSt.rst  terrainbento.derived_models.model_110_basicHySt.rst  terrainbento.derived_models.model_200_basicVs.rst  terrainbento.derived_models.model_202_basicThVs.rst  terrainbento.derived_models.model_208_basicDdVs.rst  terrainbento.derived_models.model_210_basicHyVs.rst  terrainbento.derived_models.model_300_basicStVs.rst  terrainbento.derived_models.model_400_basicSa.rst  terrainbento.derived_models.model_410_basicHySa.rst  terrainbento.derived_models.model_440_basicChSa.rst  (+83 more)
notebooks/: Welcome_to_TerrainBento.ipynb
notebooks/coupled_process_elements/: model_basicCh_steady_solution.ipynb  model_basicRt_steady_solution.ipynb  model_basicVs_steady_solution.ipynb  model_basic_steady_solution.ipynb  model_basic_var_m_steady_solution.ipynb  readme_example.ipynb
notebooks/example_usage/: Introduction_to_terrainbento.ipynb  introduction_to_boundary_conditions.ipynb  introduction_to_output_writers.ipynb
requirements-extra/: requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-notebooks.txt  requirements-testing.txt
scripts/: submit_coveralls.sh  test-installed-terrainbento.py  test_terrainbento_with_coverage.sh
terrainbento/: __init__.py  _version.py  erosion_model.py  precip_changer.py  stochastic_erosion_model.py
terrainbento/base_class/: __init__.py  bmi_model.py  erosion_model.py  model.py  model_name.py  stochastic_erosion_model.py  two_lithology_erosion_model.py
terrainbento/baselevel_handler/: single_node_baselevel_handler.py
terrainbento/bmi/: __init__.py  base.py  bmi.py  bmi_abc.py  bmi_bridge.py  bmi_functions.py  bmi_model.py  components.py  getter_setter.py  grid.py  grid_rectilinear.py  grid_structured_quad.py  grid_uniform_rectilinear.py  grid_unstructured.py  info.py  standard_names.py  time.py  vars.py
terrainbento/boundary_condition_handlers/: __init__.py  capture_node_baselevel_handler.py  closed_node_baselevel_handler.py  generic_function_baselevel_handler.py  noise_adder.py  not_core_node_baselevel_handler.py  precip_changer.py  single_node_baselevel_handler.py
terrainbento/boundary_handlers/: __init__.py  capture_node_baselevel_handler.py  generic_function_baselevel_handler.py  not_core_node_baselevel_handler.py  precip_changer.py  single_node_baselevel_handler.py
terrainbento/clock/: __init__.py  clock.py
terrainbento/derived_models/: __init__.py  derived_model_template.py  model_000_basic.py  (+56 more)
tests/: conftest.py  test_000.py  test_002.py  test_008.py  test_010.py  test_018.py  test_040.py  test_100.py  test_102.py  test_108.py  test_110.py  test_200.py  test_202.py  test_208.py  test_210.py  test_300.py  test_400.py  test_410.py  test_440.py  test_600.py  test_800.py  test_802.py  test_808.py  test_810.py  test_840.py  test_842.py  test_A00.py  test_C00.py  test_CCC.py  test_advanced_output_intervals_adapters.py  test_advanced_output_intervals_generic.py  test_advanced_output_intervals_static.py  test_all_notebooks.py  test_bad_n_sp.py  test_base_class_erosion_model_boundary_handers.py  test_base_class_erosion_model_flow_opts.py  test_base_class_erosion_model_grid_creation.py  test_base_class_erosion_model_inputs.py  test_base_class_erosion_model_misc.py  test_base_class_erosion_model_output_writers.py  (+78 more)
utilities/: utilities.py
(+149 files in other folders)
