[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrainbento"
description = "TerrainBento suite of landscape evolution models"
authors = [
  {name = "Katy Barnhart"},
  {email = "barnhark@colorado.edu"},
]
keywords = [
  "earth science",
  "landlab",
  "landscape evolution modeling",
  "numerical modeling",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
  "dask",
  "landlab >=2.6",
  "numpy >=1.20,<2",
  "pyyaml",
  "scipy",
  "xarray >= 0.16",
]
dynamic = ["readme", "version"]

[project.license]
text = "MIT License"

[project.urls]
documentation = "https://terrainbento.readthedocs.io"
repository = "https://github.com/TerrainBento/terrainbento"

[project.optional-dependencies]
dev = [
  "nox",
]
build = [
  "build",
  "twine",
  "zest.releaser"
]
notebooks = [
  "holoviews",
  "jupyter",
  "matplotlib",
  "pandas",
]
testing = [
  "coveralls",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "LICENSE"], content-type = "text/markdown"}
version = {attr = "terrainbento._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["terrainbento*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["notebooks", "terrainbento", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
  --ignore setup.py
  --tb native
  --strict-markers
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__."
]
omit = [
  "setup.py",
  "terrainbento/model_template/__init__.py",
  "terrainbento/model_template/model_template.py",
  "terrainbento/utilities/file_compare.py"
]

[tool.coverage.run]
relative_files = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "terrainbento/_version.py"
